--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@angular/platform-browser": "^7.2.5",
     "@angular/platform-browser-dynamic": "^7.2.5",
     "@angular/router": "^7.2.5",
+    "@types/jasmine": "^3.3.12",
     "core-js": "^2.6.5",
     "jasmine": "^3.4.0",
+    "jasmine-core": "^3.4.0",
     "rxjs": "^6.4.0",
     "zone.js": "^0.8.29"
   },
